--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,6 @@ lab3/swidwie_dense_cloud_crop.las
 lab3/swidwie_dense_cloud_crop_barycenter_2.xyz
 lab3/swidwie_dense_cloud_crop_center_2.xyz
 lab3/las_grid_10cm_EPSG-32633
+lab3/szczecin.las
+lab3/szczecin.laz
+lab3/szczecinClassified.las
